--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nowpay",
+  "name": "react-starter-kit",
   "version": "1.0.0",
   "author": "İsmail Bayram <ismailbayram.ce@gmail.com>",
   "license": "MIT",
